# sovereigntycore

./: Cargo.toml  LICENSE  README.md
docs/architecture/: overview.md
src/: capability_lattice.rs  lib.rs
src/cyberspectre/: tracer.rs
src/ffi/: bridge.rs
src/guards/: dow_guard.rs  ndm_guard.rs  sourze_guard.rs
src/rowrpm/: emitter.rs
tests/: integration_tests.rs
