[package]
name = "sovereigntycore"
version = "1.0.0"
edition = "2021"
authors = ["ALN Sovereign Stack Contributors"]
description = "Rust-based sovereign enforcement engine with embedded governance behaviors"
license = "ASL-1.0"
repository = "https://github.com/aln-sovereign/sovereigntycore"
documentation = "https://docs.rs/sovereigntycore"
keywords = ["aln", "sovereign", "governance", "ndm", "security"]
categories = ["cryptography", "security", "encoding"]

[dependencies]
aln-syntax-core = { version = "1.0", path = "../aln-syntax-core" }
zes-crypto-lib = { version = "1.0", path = "../zes-crypto-lib", optional = true }
row-rpm-ledger = { version = "1.0", path = "../row-rpm-ledger", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"
sha3 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10"
parking_lot = "0.12"
crossbeam-channel = "0.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"], optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
tempfile = "3.0"
serial_test = "2.0"

[lib]
name = "sovereigntycore"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sovereigntycore-cli"
path = "src/bin/cli.rs"

[[bench]]
name = "envelope_evaluation"
harness = false

[features]
default = ["std", "rowrpm-emitter", "cyberspectre-tracer"]
std = []
full-introspection = ["cyberspectre-tracer", "rowrpm-emitter"]
rowrpm-emitter = ["row-rpm-ledger"]
cyberspectre-tracer = []
zes-encryption = ["zes-crypto-lib"]
offline-mode = []
ffi-bindings = []

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "eval_envelope_example"
path = "examples/eval_envelope.rs"

[lints.clippy]
all = "deny"
pedantic = "warn"
unsafe_code = "deny"
